package ca.mcmaster.se2aa4.mazerunner.maze;

public enum CellType {
    PATH,
    WALL,
}
